crates/voom-cli/tests/snapshots/node_envelope__node_envelope__node_heartbeat_with_bad_token_returns_conflict_envelope.snap
---
source: crates/voom-cli/tests/node_envelope.rs
expression: json
---
{
  "schema_version": "0",
  "command": "node",
  "status": "error",
  "data": null,
  "local": {
    "db_url": "[db-url]",
    "config_path": "[config-path]"
  },
  "warnings": [],
  "error": {
    "code": "CONFLICT",
    "message": "conflict: nodes heartbeat rejected: id=1 token mismatch"
  }
}
