crates/voom-cli/tests/snapshots/node_envelope__node_envelope__node_heartbeat_with_env_token_activates_node.snap
---
source: crates/voom-cli/tests/node_envelope.rs
expression: json
---
{
  "schema_version": "0",
  "command": "node",
  "status": "ok",
  "data": {
    "node": {
      "id": 1,
      "name": "local-a",
      "kind": "local",
      "status": "active",
      "heartbeat_ttl_seconds": 60,
      "epoch": 1
    }
  },
  "local": {
    "db_url": "[db-url]",
    "config_path": "[config-path]"
  },
  "warnings": [],
  "error": null
}
