crates/voom-cli/tests/snapshots/node_envelope__node_envelope__node_incarnation_list_outputs_history.snap
---
source: crates/voom-cli/tests/node_envelope.rs
expression: json
---
{
  "schema_version": "0",
  "command": "node",
  "status": "ok",
  "data": {
    "incarnations": [
      {
        "incarnation_id": "22222222222222222222222222222222",
        "status": "active",
        "started_at": "1970-01-01T00:00:00Z",
        "last_seen_at": "1970-01-01T00:00:00Z",
        "ended_at": null,
        "end_reason": null,
        "worker_count": 1
      },
      {
        "incarnation_id": "11111111111111111111111111111111",
        "status": "superseded",
        "started_at": "1970-01-01T00:00:00Z",
        "last_seen_at": "1970-01-01T00:00:00Z",
        "ended_at": "1970-01-01T00:00:00Z",
        "end_reason": "superseded",
        "worker_count": 1
      }
    ]
  },
  "local": {
    "db_url": "[db-url]",
    "config_path": "[config-path]"
  },
  "warnings": [],
  "error": null
}
