crates/voom-cli/tests/snapshots/node_envelope__node_envelope__node_register_outputs_token_once.snap
---
source: crates/voom-cli/tests/node_envelope.rs
expression: json
---
{
  "schema_version": "0",
  "command": "node",
  "status": "ok",
  "data": {
    "node": {
      "id": 1,
      "name": "local-a",
      "kind": "local",
      "status": "registered",
      "heartbeat_ttl_seconds": 60,
      "epoch": 0
    },
    "token": "[token]",
    "token_hint": "[token-hint]"
  },
  "local": {
    "db_url": "[db-url]",
    "config_path": "[config-path]"
  },
  "warnings": [],
  "error": null
}
