crates/voom-cli/tests/snapshots/node_envelope__node_envelope__node_retire_outputs_retired_status.snap
---
source: crates/voom-cli/tests/node_envelope.rs
expression: json
---
{
  "schema_version": "0",
  "command": "node",
  "status": "ok",
  "data": {
    "node": {
      "id": 1,
      "name": "local-a",
      "kind": "local",
      "status": "retired",
      "heartbeat_ttl_seconds": 60,
      "epoch": 1
    }
  },
  "local": {
    "db_url": "[db-url]",
    "config_path": "[config-path]"
  },
  "warnings": [],
  "error": null
}
