crates/voom-cli/tests/snapshots/node_envelope__node_envelope__node_show_does_not_expose_token_hash_or_plaintext.snap
---
source: crates/voom-cli/tests/node_envelope.rs
expression: show_json
---
{
  "schema_version": "0",
  "command": "node",
  "status": "ok",
  "data": {
    "node": {
      "id": 1,
      "name": "local-a",
      "kind": "local",
      "status": "registered",
      "heartbeat_ttl_seconds": 60,
      "epoch": 0,
      "active_incarnation_id": null
    }
  },
  "local": {
    "db_url": "[db-url]",
    "config_path": "[config-path]"
  },
  "warnings": [],
  "error": null
}
