crates/voom-cli/tests/snapshots/node_envelope__node_envelope__node_token_sources_are_mutually_exclusive_bad_args.snap
---
source: crates/voom-cli/tests/node_envelope.rs
expression: json
---
{
  "schema_version": "0",
  "command": "node",
  "status": "error",
  "data": null,
  "local": {
    "db_url": "[db-url]",
    "config_path": "[config-path]"
  },
  "warnings": [],
  "error": {
    "code": "BAD_ARGS",
    "message": "pass exactly one token source"
  }
}
